--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,9 +1,9 @@
 <% if @model == 'map' %>
- <h3>スポットの検索結果 "<%= @content %>"</h3>
+ <h3><%= t('.result_spot')%> "<%= @content %>"</h3>
   <%= render 'maps/index', maps: @records %>
- <h5>新たにスポットを登録する=><%=link_to "Go", maps_path %></h5>
+ <h5><%= t('.create_spot')%> =><%=link_to "Go", maps_path %></h5>
 <% elsif @model == 'hashtag' %>
-	<h3>ハッシュタグの検索結果"<%= @content %>"</h3>
+	<h3><%= t('.result_hashtag')%>"<%= @content %>"</h3>
   <%= render 'hashtags/index', hashtags: @records %>
 <% end %>
 
