Fixed wrong code

--- a/app/views/maps/_map.html.erb
+++ b/app/views/maps/_map.html.erb
@@ -1,6 +1,6 @@
 <div class="gmap">
   <h2><%= t('.searchandpost') %></h2>
-  <% if @map.errors.any? %>
+  <% if map.errors.any? %>
   <h2><%= t('.error') %></h2>
   <% end %>
 
