--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the search controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.search-bar {
+  // width: 20vw!important;
+  // border: 1px solid rgba(211,211,211,0.5);
+  // background-color: white;
+  // position: fixed!important;
+  // top: 10vh;
+  // top: 7.2rem;
+  // right: 18vw;
+
+    .search-box {
+      margin-top: 10px;
+
+
+
+    .search_form {
+          padding: 1px;
+          border: none;
+          outline: none;
+          border-bottom: 1px solid #666;
+          margin-bottom: 15px;
+          width: 15vw;
+        }
+    }
+}
