--- a/app/views/maps/country.html.erb
+++ b/app/views/maps/country.html.erb
@@ -1,16 +1,16 @@
+<div class='col-lg-4 col-lg-offset-2'>
+    <% @country_ranks.keys.each do |country| %>
 
-<% @country_ranks.keys.each do |country| %>
-
-<h3><%= country %>に人気のスポット</h3>
+    <h3><%= country %>に人気のスポット</h3>
 
 
-  <% if @country_ranks[country].select{|map| map.spotname.present?}.count == 0 %>
-    <p>まだいいねされたスポットはありません。</p>
-  <% else %>
-    <% @country_ranks[country].each do |map| %>
-      <div><%= link_to map.spotname, map_path(map.id)%></div>
+      <% if @country_ranks[country].select{|map| map.spotname.present?}.count == 0 %>
+        <p>まだいいねされたスポットはありません。</p>
+      <% else %>
+        <% @country_ranks[country].each do |map| %>
+          <div><%= link_to map.spotname, map_path(map.id)%></div>
+        <% end %>
+      <% end %>
+
     <% end %>
-  <% end %>
-
-<% end %>
-
+</div>
