--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,9 +1,12 @@
-<% if @model == 'map' %>
- <h3><%= t('.result_spot')%> "<%= @content %>"</h3>
-  <%= render 'maps/index', maps: @records %>
- <h5><%= t('.create_spot')%> =><%=link_to "Go", maps_path %></h5>
-<% elsif @model == 'hashtag' %>
-	<h3><%= t('.result_hashtag')%>"<%= @content %>"</h3>
-  <%= render 'hashtags/index', hashtags: @records %>
-<% end %>
+<div class='col-lg-4 col-lg-offset-2'>
 
+  <% if @model == 'map' %>
+   <h3><%= t('.result_spot')%> "<%= @content %>"</h3>
+    <%= render 'maps/index', maps: @records %>
+   <h5><%= t('.create_spot')%> =><%=link_to "Go", maps_path %></h5>
+  <% elsif @model == 'hashtag' %>
+  	<h3><%= t('.result_hashtag')%>"<%= @content %>"</h3>
+    <%= render 'hashtags/index', hashtags: @records %>
+  <% end %>
+
+</div>
