--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,10 +1,12 @@
-<h3><%= t('.favoritesindex') %></h3>
-<table>
-  <tbody>
-<% @favorite_list.each do |map| %>
-  <tr>
-  <td><%= link_to map.spotname, map_path(map.id) %></td>
-  </tr>
-  </tbody>
-<% end %>
-</table>
+<div class='col-lg-4 col-lg-offset-2'>
+    <h3><%= t('.favoritesindex') %></h3>
+    <table>
+      <tbody>
+    <% @favorite_list.each do |map| %>
+      <tr>
+      <td><%= link_to map.spotname, map_path(map.id) %></td>
+      </tr>
+      </tbody>
+    <% end %>
+    </table>
+</div>
