--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -178,7 +178,7 @@ a.btn--shadow {
   font-style: inherit;
   margin: 0 auto;
   color: white;
-  background-color: #5bc0de;
+  background-color: orange;
   border-radius: 5px;
   width: 300px;
   height: 40px;
