--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,18 +115,18 @@ main {
 
 
 
-a.btn--orange {
+.btn--orange {
   color: #fff;
   background-color: #eb6100;
   border-bottom: 5px solid #b84c00;
 }
-a.btn--orange:hover {
+.btn--orange:hover {
   margin-top: 3px;
   color: #fff;
   background: #f56500;
   border-bottom: 2px solid #b84c00;
 }
-a.btn--shadow {
+.btn--shadow {
   -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
   box-shadow: 0 3px 5px rgba(0, 0, 0, .3);
 }
@@ -185,6 +185,13 @@ a.btn--shadow {
   text-align: center;
   line-height: 40px;
   position: fixed;
+}
+
+#img_field:hover {
+  margin-top: 3px;
+  color: #fff;
+  background: #f56500;
+  border-bottom: 2px solid #b84c00;
 }
 
 #preview {
