--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -3,16 +3,16 @@
   <div class="form-group">
     <%= f.label :title, class:"control-label" %></br>
     <%= f.text_field :title, size:"23x1" %>
-    <% if @comment.errors.include?(:title) %>
-     <p style="color: red;"><%= @comment.errors.full_messages_for(:title).first %>
+    <% if comment.errors.include?(:title) %>
+     <p style="color: red;"><%= comment.errors.full_messages_for(:title).first %>
     <% end %>
   </div>
 
   <div class="form-group">
     <%= f.label :comment, class:"control-label" %></br>
     <%= f.text_area :comment, size:"25x7", placeholder: t('.min_letter') %>
-    <% if @comment.errors.include?(:comment) %>
-     <p style="color: red;"><%= @comment.errors.full_messages_for(:comment).first %>
+    <% if comment.errors.include?(:comment) %>
+     <p style="color: red;"><%= comment.errors.full_messages_for(:comment).first %>
     <% end %>
   </div>
 
@@ -44,8 +44,8 @@
   <div class="form-group" id="star">
     <%= f.label :star, class:"control-label" %></br>
     <%= f.hidden_field :star, id: :review_star %>
-    <% if @comment.errors.include?(:star) %>
-     <p style="color: red;"><%= @comment.errors.full_messages_for(:star).first %>
+    <% if comment.errors.include?(:star) %>
+     <p style="color: red;"><%= comment.errors.full_messages_for(:star).first %>
     <% end %>
   </div></br>
   <div class="form-group">
