--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -5,9 +5,9 @@
         <h1><%= @map.spotname %></h1>
 
          <div class = "hashtag-circle">
-         <% @comment_tags.each do |comment| %>
-            <%= render_with_hashtags(comment.comment) %>
-         <% end %>
+             <% @comment_tags.each do |comment| %>
+                <%= render_with_hashtags(comment.comment) %>
+             <% end %>
          </div>
 
 
@@ -101,7 +101,7 @@
         <div class='col-xs-3'>
           <div class="commentnew">
             <h4><%= t('.newcomment') %></h4>
-            <%= render 'maps/form', map: @map, comment: Comment.new %>
+            <%= render 'maps/form', map: @map, comment: @comment %>
             <h6><%= link_to  t('.backtomap'),  maps_path, class: "cp_link" %></h6>
             <% unless user_signed_in? %>
             <h6><%= link_to  t('.logintocomment'), new_user_session_path, class: "cp_link" %></h6>
