--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -4,11 +4,11 @@
     <div class='col-xs-9'>
         <h1><%= @map.spotname %></h1>
 
-         <div class = "hashtag-circle">
-             <% @comment_tags.each do |comment| %>
-                <%= render_with_hashtags(comment.comment) %>
-             <% end %>
-         </div>
+         <!--<div class = "hashtag-circle">-->
+         <!--    <%# @comment_tags.each do |comment| %>-->
+         <!--       <%#= render_with_hashtags(comment.hashname) %>-->
+         <!--    <%# end %>-->
+         <!--</div>-->
 
 
           <div class="average-star-rate<%= @map.id %>"></div>
