--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.tag-box {
+  width: 40%;
+  margin: 0 auto;
+  border: 1px dotted black {
+    padding: 20px;
+  };
+}
+
+.center {
+  text-align: center;
+}
+
+.flex-tag {
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin-top: 35px;
+}
