--- a/app/views/comments/hashtag.html.erb
+++ b/app/views/comments/hashtag.html.erb
@@ -2,23 +2,24 @@
 
       <h2><%= t('.hashtag') %> #<%= @tag.hashname %></h2>
         <ul>
-          <% @comments.each do |comment| %>
+          <% @comments.group(:map_id).each do |comment| %>
           <%# byebug %>
 
-          <h3><%= link_to comment.map.spotname, map_path(comment.map.id) %></h3>
-         <div class="average-star-rate<%= comment.map_id %>"></div>
-         <%# byebug %>
-         <script>
-               $('.average-star-rate<%= comment.map_id %>').raty({
-                 size      : 25,
-                 starOff   : '<%= asset_path('star-off.png') %>',
-                 starOn    : '<%= asset_path('star-on.png') %>',
-                 starHalf  : '<%= asset_path('star-half.png') %>',
-                 readOnly: true,
-                 score: <%= comment.map.comments.average(:star) %>,
-                });
-               </script>
-          <% end %>
+          <h3><%= link_to comment.map.spotname, map_path(comment.map_id) %></h3>
+             <div class="average-star-rate<%= comment.map_id %>"></div>
+             <%# byebug %>
+             <script>
+                   $('.average-star-rate<%= comment.map_id %>').raty({
+                     size      : 25,
+                     starOff   : '<%= asset_path('star-off.png') %>',
+                     starOn    : '<%= asset_path('star-on.png') %>',
+                     starHalf  : '<%= asset_path('star-half.png') %>',
+                     readOnly: true,
+                     score: <%= comment.map.comments.average(:star) %>,
+                    });
+                   </script>
+              <% end %>
+              <%# end %>
         </ul>
 
       <%= link_to t('.hashtag_all'), comment_all_hashtag_path %>
