Removed fixed position because it works bad in small monitor

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,7 +156,7 @@ main {
 }
 
 .commentnew {
-  position: fixed;
+  // position: fixed;
 }
 
 
@@ -184,7 +184,7 @@ main {
   height: 40px;
   text-align: center;
   line-height: 40px;
-  position: fixed;
+  // position: fixed;
 }
 
 #img_field:hover {
