Removed tag for spot

--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -5,8 +5,8 @@
         <h1><%= @map.spotname %></h1>
 
          <!--<div class = "hashtag-circle">-->
-         <!--    <%# @comment_tags.each do |comment| %>-->
-         <!--       <%#= render_with_hashtags(comment.hashname) %>-->
+         <!--    <%# @comment_tags.each do |hashtag_spot| %>-->
+         <!--       <%#= render_with_hashtags(hashtag_spot.comment) %>-->
          <!--    <%# end %>-->
          <!--</div>-->
 
