--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,14 @@
 
   <body>
 
-
+   <div class="main-visual">
     <%= render 'layouts/header' %>
+   </div>
 
-   <main>
+
+
     <%= yield %>
-   </main>
+
 
     <%= render 'layouts/footer' %>
 
