--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 .main-visual {
   width: 100%;
   height: 300px;
-  background-image: url(map_bar.jpg);
+  background-image: image-url("map_bar.jpg");
   background-size: cover;
   // background-position: center;
 
