--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,31 +22,23 @@
   box-sizing: border-box;
 }
 
-.main-visual {
-  width: 100%;
-  height: 300px;
-  background-image: image-url("map_bar.jpg");
-  background-size: cover;
-  // background-position: center;
-
-
     header {
 
 
     .logo {
-      padding-top: 5em;
-      padding-left: 6em;
+      padding-top: 1em;
+      padding-left: 1em;
     }
 
     .language {
-      padding-top: 5px;
-      padding-left: 6em;
+      padding-top: 1px;
+      padding-left: 1em;
     }
 
     ul {
           display: flex;
-          padding-top: 10em;
-          padding-right: 15em;
+          padding-top: 1em;
+          padding-right: 2em;
           justify-content: flex-end;
 
     }
@@ -56,7 +48,36 @@
             display: flex;
             margin-left: 10px;
      }
-   }
+
+
+.main-visual {
+  width: 100%;
+  height: 600PX;
+  background-image: image-url("map_bar.jpg");
+  background-size: cover;
+
+.main-visual-content {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  height: 3.2rem;
+  font-family: var(--font-family-serif);
+  font-weight: 600;
+  font-size: 6.5rem;
+  line-height: 1;
+  max-width: 1000px;
+  color: white;
+}
+
+.main-visual-text {
+  color: #fff; /* 文字色を白に変更 */
+}
+}
+
 }
 
 
