--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,12 @@
 
   <body>
 
-   
-          <%= render 'layouts/header' %>
 
+    <%= render 'layouts/header' %>
 
-
-
+   <main>
     <%= yield %>
-
+   </main>
 
     <%= render 'layouts/footer' %>
 
