--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,12 +22,11 @@
   box-sizing: border-box;
 }
 
-    header {
-
+  header {
 
     .logo {
       padding-top: 1em;
-      padding-left: 1em;
+      padding-left: 4.5em;
     }
 
     .language {
@@ -37,7 +36,7 @@
 
     ul {
           display: flex;
-          padding-top: 1em;
+          padding-top: 3em;
           padding-right: 2em;
           justify-content: flex-end;
 
@@ -49,36 +48,11 @@
             margin-left: 10px;
      }
 
-
-.main-visual {
-  width: 100%;
-  height: 600PX;
-  background-image: image-url("map_bar.jpg");
-  background-size: cover;
-
-.main-visual-content {
-  text-align: center;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  height: 3.2rem;
-  font-family: var(--font-family-serif);
-  font-weight: 600;
-  font-size: 6.5rem;
-  line-height: 1;
-  max-width: 1000px;
-  color: white;
 }
 
-.main-visual-text {
-  color: #fff; /* 文字色を白に変更 */
-}
-}
-
-}
+  main {
+      padding :100px 0;
+    }
 
 
 
