--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -2,7 +2,34 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.main-visual {
+  width: 100%;
+  height: 600PX;
+  background-image: image-url("map_bar.jpg");
+  background-size: cover;
+  z-index: 100;
 
+.main-visual-content {
+  text-align: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  height: 3.2rem;
+  font-family: var(--font-family-serif);
+  font-weight: 600;
+  font-size: 6.5rem;
+  line-height: 1;
+  max-width: 1000px;
+  color: white;
+}
+
+.main-visual-text {
+  color: #fff;
+}
+}
 
 
 .cp_link {
