--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -1,61 +1,64 @@
-
-
-
-<div class="container-fluid">
-  <div class="row justify-content-start">
-
-
-    <!--<h1><%#= t('.welcome') %></h1>-->
-   <%= render 'maps/searchbar' %>
-
-
-    <div class='col-lg-4 col-lg-offset-2'>
-      <%= render 'maps/map', maps: @maps, map: @map %>
-    </div>
-
-    <div class='col-lg-3 col-lg-offset-1'>
-
-        <h3><%= t('.mostliked') %></h3>
-        <% @all_ranks.each do |map| %>
-         <div><%= link_to map.spotname, map_path(map.id), class: "cp_link" %></div>
-          <i class="fa fa-heart"></i>
-            <%= map.favorites.count %>
-            <% if map.comments.present? %>
-            <div id="average-star-rating<%= map.id %>"></div>
-             <script>
-              $('#average-star-rating<%= map.id %>').raty({
-                size      : 25,
-                starOff   : '<%= asset_path('star-off.png') %>',
-                starOn    : '<%= asset_path('star-on.png') %>',
-                starHalf:  '<%= asset_path('star-half.png') %>',
-                readOnly: true,
-                score: <%= map.comments.average(:star) %>,
-              });
-             </script>
-            <% else%>
-              <p><%= t('.nocomment') %></p>
-            <% end %>
-
-         <div class="imagesize">
-           <% if map.comments.select{|comment| comment.image.present?}.count == 0 %>
-            <p><%= t('.noimage') %></p>
-           <% else %>
-            <div class="slider">
-             <% map.comments.select{|comment| comment.image.present?}.each do |comment| %>
-              <%= attachment_image_tag comment, :image, size: "100x100", format: 'jpeg' %>
-             <% end %>
-            </div>
-           <% end %>
-         </div>
-        <% end %>
-
-        <%= link_to t('.ranks_by_country'), country_maps_path, class: "btn btn--orange" %> <br>
-        <%= link_to t('.hashtag_all'), comment_all_hashtag_path, class: "btn btn--orange" %>
-
-    <!--</div>-->
-   </div>
-
-
-
- </div>
+ <div class="main-visual">
+  <div class="main-visual-content">
+     <p class="main-visual-text">
+      Welcome to Hona!
+     </p>
+  </div>
 </div>
+
+
+     <div class="container-fluid">
+       <div class="row justify-content-start">
+
+
+         <!--<h1><%#= t('.welcome') %></h1>-->
+        <%= render 'maps/searchbar' %>
+
+
+         <div class='col-lg-4 col-lg-offset-2'>
+           <%= render 'maps/map', maps: @maps, map: @map %>
+         </div>
+
+         <div class='col-lg-3 col-lg-offset-1'>
+
+             <h3><%= t('.mostliked') %></h3>
+             <% @all_ranks.each do |map| %>
+              <div><%= link_to map.spotname, map_path(map.id), class: "cp_link" %></div>
+               <i class="fa fa-heart"></i>
+                 <%= map.favorites.count %>
+                 <% if map.comments.present? %>
+                 <div id="average-star-rating<%= map.id %>"></div>
+                  <script>
+                   $('#average-star-rating<%= map.id %>').raty({
+                     size      : 25,
+                     starOff   : '<%= asset_path('star-off.png') %>',
+                     starOn    : '<%= asset_path('star-on.png') %>',
+                     starHalf:  '<%= asset_path('star-half.png') %>',
+                     readOnly: true,
+                     score: <%= map.comments.average(:star) %>,
+                   });
+                  </script>
+                 <% else%>
+                   <p><%= t('.nocomment') %></p>
+                 <% end %>
+
+              <div class="imagesize">
+                <% if map.comments.select{|comment| comment.image.present?}.count == 0 %>
+                 <p><%= t('.noimage') %></p>
+                <% else %>
+                 <div class="slider">
+                  <% map.comments.select{|comment| comment.image.present?}.each do |comment| %>
+                   <%= attachment_image_tag comment, :image, size: "100x100", format: 'jpeg' %>
+                  <% end %>
+                 </div>
+                <% end %>
+              </div>
+             <% end %>
+
+             <%= link_to t('.ranks_by_country'), country_maps_path, class: "btn btn--orange" %> <br>
+             <%= link_to t('.hashtag_all'), comment_all_hashtag_path, class: "btn btn--orange" %>
+
+         <!--</div>-->
+        </div>
+       </div>
+     </div>
