--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-   <nav class="navbar navbar-light bg-light navbar-fixed-top" style= "background: #fff;">
+   <nav class="navbar navbar-light bg-light" style= "background: #fff;">
      <nav class="nav navbar-nav col-xs-5 nav-left">
         <div class="logo"><%= link_to image_tag("logo.png", style: "width: 50px; height: 50px;"), root_path, class: "logo" %><br>
          <div class="language"><% I18n.available_locales.reject{|l| l == I18n.locale}.each do |locale| %>
