Modified search-bar position

--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -4,6 +4,9 @@
       Welcome to Hona!
      </p>
   </div>
+     <div class="search-box">
+      <%= render 'maps/searchbar' %>
+     </div>
 </div>
 
 
@@ -12,7 +15,7 @@
 
 
          <!--<h1><%#= t('.welcome') %></h1>-->
-        <%= render 'maps/searchbar' %>
+
 
 
          <div class='col-lg-4 col-lg-offset-2'>
