--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -206,9 +206,9 @@
     width: 100%;
   }
 
-  .search-form{
-    position: fixed;
-  }
+  // .search-form{
+  //   position: fixed;
+  // }
 
  }
 
