--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -10,6 +10,10 @@
   z-index: 100;
 
 .main-visual-content {
+
+}
+
+.main-visual-text {
   text-align: center;
   position: absolute;
   top: 0;
@@ -25,10 +29,29 @@
   max-width: 1000px;
   color: white;
 }
-
-.main-visual-text {
-  color: #fff;
 }
+
+.search-box {
+    // display:flex;
+    // flex-direction: column;
+    // justify-content:center;
+    align-items: flex-end;
+    // // margin-top: auto;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    height: 0.2rem;
+    padding-top: 150px;
+    // font-family: var(--font-family-serif);
+    // font-weight: 600;
+    // font-size: 6.5rem;
+    // line-height: 1;
+    // max-width: 1000px;
+//     color: white;
 }
 
 
