--- a/app/views/maps/_searchbar.html.erb
+++ b/app/views/maps/_searchbar.html.erb
@@ -1,12 +1,11 @@
- <div class="col-lg-1 col-lg-offset-1 search-bar">
-   <div class="search-box">
+ <!--<div class="col-lg-1 col-lg-offset-1 search-bar">-->
+
      <%= form_with url: search_path, method: :get, local: true do |f| %>
       <i class="fas fa-search"></i>
-      <%= f.text_field :content, class: "search_form" %><br>
-
-      <div class="form-group"><%= f.select :model, options_for_select({ t('.serachspot') => "map", t('.hashtag') => "hashtag" }) %></div>
-      <div class="form-group"><%= f.select :method, options_for_select({  t('.exact') => "perfect",  t('.forward') => "forward",  t('.backward') => "backward",  t('.partial') => "partial" }) %></div>
-      <div class="form-group"><%= f.submit t('.searchbutton') %></div>
+      <%= f.text_field :content, class: "search_form" %>
+      <%= f.select :model, options_for_select({ t('.serachspot') => "map", t('.hashtag') => "hashtag" }) %>
+      <%= f.select :method, options_for_select({  t('.exact') => "perfect",  t('.forward') => "forward",  t('.backward') => "backward",  t('.partial') => "partial" }) %>
+      <%= f.submit t('.searchbutton') %>
      <% end %>
-   </div>
- </div>
+
+ <!--</div>-->
