--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -48,7 +48,7 @@
     padding-top: 150px;
     // font-family: var(--font-family-serif);
     // font-weight: 600;
-    // font-size: 6.5rem;
+    font-size: 2.0rem;
     // line-height: 1;
     // max-width: 1000px;
 //     color: white;
