--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -80,9 +80,8 @@
               </div>
              <% end %>
              <!--</div>-->
-
-             <%= link_to t('.ranks_by_country'), country_maps_path, class: "btn btn--orange" %> <br>
-             <%= link_to t('.hashtag_all'), comment_all_hashtag_path, class: "btn btn--orange" %>
-
-       <!--</div>-->
+         <div class="ranking_index">
+          <%= link_to t('.ranks_by_country'), country_maps_path, class: "btn btn--orange" %> <br>
+          <%= link_to t('.hashtag_all'), comment_all_hashtag_path, class: "btn btn--orange" %>
+         </div>
      </div>
